tests/print/missing_argument_with_parentheses.out
[31merror[error]: Expect expression.
----- Traceback -----
  ┌─ <unknown>:1:7
  | 
1 | print()
  |        ^
[0m